--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,8 @@
         <ul class="nav-links" id="nav-links">
             <li><a href="{{ url_for('index') }}#services" onclick="toggleMenu()">Usluge</a></li>
             <li><a href="{{ url_for('index') }}#about" onclick="toggleMenu()">O meni</a></li>
-            <li><a href="{{ url_for('shop') }}" onclick="toggleMenu()">Demo Shop</a></li> <li><a href="{{ url_for('index') }}#contact" onclick="toggleMenu()">Kontakt</a></li>
+            <li><a href="{{ url_for('shop') }}" onclick="toggleMenu()">Demo Shop</a></li>
+            <li><a href="{{ url_for('index') }}#contact" onclick="toggleMenu()">Kontakt</a></li>
         </ul>
     </nav>
 
