Feat: Dodat Crypto Dashboard sa plavom temom i kesiranjem

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
             <li><a href="{{ url_for('index') }}#services" onclick="toggleMenu()">Usluge</a></li>
             <li><a href="{{ url_for('index') }}#about" onclick="toggleMenu()">O meni</a></li>
             <li><a href="{{ url_for('shop') }}" onclick="toggleMenu()">Demo Shop</a></li>
+            <li><a href="{{ url_for('dashboard') }}">Crypto Dashboard</a></li>
             <li><a href="{{ url_for('index') }}#contact" onclick="toggleMenu()">Kontakt</a></li>
         </ul>
     </nav>
