Feat: Dodat AI Image Generator (Stable Diffusion)

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
             <li><a href="{{ url_for('index') }}#about" onclick="toggleMenu()">O meni</a></li>
             <li><a href="{{ url_for('shop') }}" onclick="toggleMenu()">Demo Shop</a></li>
             <li><a href="{{ url_for('dashboard') }}">Crypto Dashboard</a></li>
+            <li><a href="{{ url_for('generate_image_page') }}">AI Slike 🎨</a></li>
             <li><a href="{{ url_for('index') }}#contact" onclick="toggleMenu()">Kontakt</a></li>
         </ul>
     </nav>
